# rust_telegram_bot

./: .gitignore  Cargo.toml  README.md
src/: client_methods.rs  main.rs  utils.rs
