[package]
name = "rust_telegram_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grammers-client = "0.8.1"
grammers-session = "0.8.0"
grammers-tl-types = "0.8.0"
futures-util = "0.3.30"
log = "0.4.21"
regex = "1.12.3"
rand = { version = "0.10.0", features = [] }
html_parser = "0.7.0"
tokio = { version = "1.49.0", default-features = false, features = [
    "fs",
    "rt",
    "signal"
] }
